Project & service
- added basic message management endpoints,
- moved API endpoint definition to a separate package
